finish the env setting for ai-service, backend-api and code runner

--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -16,10 +16,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 FROM base AS dev
 COPY . .
 EXPOSE 9000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "9000", "--reload"]
 
 # Stage 3: Production image
 FROM base AS prod
 COPY . .
 EXPOSE 9000
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "9000"]
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "9000"]
