--- a/backend-api/Dockerfile
+++ b/backend-api/Dockerfile
@@ -9,10 +9,10 @@
  FROM base AS dev
  COPY . .
  EXPOSE 8000
- CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+ CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
 
  # Stage 3: production image
  FROM base AS prod
  COPY . .
  EXPOSE 8000
- CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000"]
