--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,19 +2,30 @@ version: "3.9"
 
 services:
   frontend:
+    container_name: frontend-dev 
     build:
       context: ./frontend
       target: dev
     volumes:
+      # mount everything *except* node_modules
       - ./frontend:/app
+      # keep container‑built node_modules in a named volume
+      - frontend_node_modules:/app/node_modules
     ports:
       - "5173:5173"
     env_file:
       - .env.example
     depends_on:
       - backend-api
+    # tiny one‑shot container that just exits
+  frontend-init:
+    image: rabbitly-frontend:dev     # same image
+    command: ["true"]
+    volumes:
+      - frontend_node_modules:/app/node_modules
 
   backend-api:
+    container_name: backend-api-dev
     build:
       context: ./backend-api
       target: dev
@@ -30,6 +41,7 @@ services:
       - code-runner
 
   ai-service:
+    container_name: ai-service-dev
     build:
       context: ./ai-service
       target: dev
@@ -39,6 +51,7 @@ services:
       - "9000:9000"
 
   code-runner:
+    container_name: code-runner-dev
     build:
       context: ./code-runner
       target: dev
@@ -46,3 +59,6 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
       - "9100:9100"
+
+volumes:
+  frontend_node_modules:
