--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,7 @@
-
-
 version: "3.9"
 
 services:
+  # --------- FRONTEND  (static SSR node server) ----------
   frontend:
     build:
       context: ./frontend
@@ -10,9 +9,10 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=production
+      NODE_ENV: production
     restart: always
 
+  # ---------- BACKEND GATEWAY ----------------------------
   backend-api:
     build:
       context: ./backend-api
@@ -20,15 +20,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - AI_SERVICE_URL=http://ai-service:9000
-      - CODE_RUNNER_URL=http://code-runner:9100
-      - QDRANT_URL=http://qdrant:6333
-    restart: always
+      AI_SERVICE_URL: http://ai-service:9000
+      CODE_RUNNER_URL: http://code-runner:9100
+      QDRANT_URL: http://qdrant:6333
     depends_on:
       - ai-service
       - code-runner
       - qdrant
+    restart: always
 
+  # ------------- AI SERVICE ------------------------------
   ai-service:
     build:
       context: ./ai-service
@@ -36,11 +37,12 @@ services:
     ports:
       - "9000:9000"
     environment:
-      - QDRANT_URL=http://qdrant:6333
-    restart: always
+      QDRANT_URL: http://qdrant:6333
     depends_on:
       - qdrant
+    restart: always
 
+  # ------------- CODE‑RUNNER ------------------------------
   code-runner:
     build:
       context: ./code-runner
@@ -49,8 +51,3 @@ services:
       - "9100:9100"
     restart: always
 
-  qdrant:
-    image: qdrant/qdrant:v1.8.7
-    ports:
-      - "6333:6333"
-    restart: always
