--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,8 +1,13 @@
 version: "3.9"
 
+volumes:
+  qdrant_data:
+
 services:
-  # --------- FRONTEND  (static SSR node server) ----------
+  # -------- FRONTEND (SSR Node server) ----------
   frontend:
+    image: rabbitly-frontend:prod           # use same tag everywhere
+    container_name: frontend
     build:
       context: ./frontend
       target: prod
@@ -12,8 +17,10 @@ services:
       NODE_ENV: production
     restart: always
 
-  # ---------- BACKEND GATEWAY ----------------------------
+  # ------------- BACKEND GATEWAY ---------------
   backend-api:
+    image: rabbitly-backend-api:prod
+    container_name: backend-api
     build:
       context: ./backend-api
       target: prod
@@ -29,8 +36,10 @@ services:
       - qdrant
     restart: always
 
-  # ------------- AI SERVICE ------------------------------
+  # -------------- AI SERVICE -------------------
   ai-service:
+    image: rabbitly-ai-service:prod
+    container_name: ai-service
     build:
       context: ./ai-service
       target: prod
@@ -42,8 +51,10 @@ services:
       - qdrant
     restart: always
 
-  # ------------- CODE‑RUNNER ------------------------------
+  # ------------- CODE‑RUNNER --------------------
   code-runner:
+    image: rabbitly-code-runner:prod
+    container_name: code-runner
     build:
       context: ./code-runner
       target: prod
@@ -51,3 +62,12 @@ services:
       - "9100:9100"
     restart: always
 
+  # ------------- VECTOR DB (Qdrant) -------------
+  qdrant:
+    image: qdrant/qdrant:v1.8.7
+    container_name: qdrant
+    volumes:
+      - qdrant_data:/qdrant/storage
+    ports:
+      - "6333:6333"
+    restart: always
