--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,8 @@ services:
       - frontend_node_modules:/app/node_modules
     ports:
       - "5173:5173"
+    environment:
+      PUBLIC_API_URL: http://backend-api:8000      # <─ Docker DNS name
     env_file:
       - .env.example
     # Omit depends_on so you can run the UI alone
