--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
 		"svelte": "5.28.2",
 		"svelte-preprocess": "^6.0.3",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.3"
+		"vite": "^6.3.3",
+		"vite-plugin-svgstring": "^1.0.0"
 	},
 	"type": "module",
 	"engines": {
@@ -42,7 +43,6 @@
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.7",
 		"katex": "^0.16.22",
-		"tailwindcss": "^4.1.7",
-		"vite-plugin-svgstring": "^1.0.0"
+		"tailwindcss": "^4.1.7"
 	}
 }
